--- a/src/index.html
+++ b/src/index.html
@@ -1,96 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ice cream</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <!-- Hero and header section -->
+    <include src="./partials/header-hero.html"></include>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ice cream</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-    crossorigin="anonymous" />
-</head>
+    <!-- Products section -->
+    <include src="./partials/products.html"></include>
 
-<body>
-  <!-- Hero and header section -->
-  <include src="./partials/header-hero.html"></include>
+    <!-- About section -->
+    <include src="./partials/about.html"></include>
 
-  <!-- Products section -->
-  <include src="./partials/products.html"></include>
+    <!-- Advantages section -->
+    <include src="./partials/advantages.html"></include>
 
-  <!-- About section -->
-  <include src="./partials/about.html"></include>
+    <!-- Gallery section -->
+    <include src="./partials/gallery.html"></include>
 
-  <!-- Advantages section -->
-  <include src="./partials/advantages.html"></include>
+    <!-- Customer review section -->
+    <include src="./partials/customer-reviews.html"></include>
 
-  <!-- Gallery section -->
-  <include src="./partials/gallery.html"></include>
+    <!-- Contacts section -->
+    <include src="./partials/contacts.html"></include>
 
-  <!-- Customer review section -->
-  <include src="./partials/customer-reviews.html"></include>
+    <!-- Footer section -->
+    <include src="./partials/footer.html"></include>
 
-  <!-- Contacts section -->
-  <include src="./partials/contacts.html"></include>
+    <!-- Mobile menu -->
+    <include src="./partials/mobile-menu.html"></include>
 
-  <!-- Footer section -->
-  <include src="./partials/footer.html"></include>
+    <!-- Modal about section -->
+    <include src="./partials/modal-about.html"></include>
 
-  <!-- Mobile menu -->
-  <include src="./partials/mobile-menu.html"></include>
+    <!-- Modal franchise  -->
+    <include src="./partials/modal-franchise.html"></include>
 
-  <!-- Modal about section -->
-  <include src="./partials/modal-about.html"></include>
+    <!-- Modal map -->
+    <include src="./partials/modal-map.html"></include>
 
-  <!-- Modal franchise  -->
-  <include src="./partials/modal-franchise.html"></include>
+    <!-- Modal product -->
+    <include src="./partials/modal-product.html"></include>
 
-  <!-- Modal map -->
-  <include src="./partials/modal-map.html"></include>
+    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="./index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+    <script src="./js/gallary.js"></script>
+    <script>
+      const btn = document.getElementById('menu-toggle');
+      const lines = btn.querySelectorAll('.line');
+      const cls = { open: 'open', close: 'close' };
+      let btnClass = cls.open;
 
-  <!-- Modal product -->
-  <include src="./partials/modal-product.html"></include>
+      btn.addEventListener('click', () => {
+        if (btn.classList.contains(cls.open)) {
+          btn.classList.remove(btnClass);
+          btnClass = cls.close;
+        } else if (btn.classList.contains(cls.close)) {
+          btn.classList.remove(btnClass);
+          btnClass = cls.open;
+        }
 
-  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-  <script src="./index.js"></script>
-  <script>
-    const btn = document.getElementById("menu-toggle");
-    const lines = btn.querySelectorAll(".line");
-    const cls = { open: "open", close: "close" };
-    let btnClass = cls.open;
+        void btn.offsetWidth;
+        btn.classList.add(btnClass);
+      });
+    </script>
+    <script>
+      (() => {
+        const refs = {
+          openModalBtn: document.querySelector('[data-modal-open]'),
+          closeModalBtn: document.querySelector('[data-modal-close]'),
+          modal: document.querySelector('[data-modal]'),
+        };
 
-    btn.addEventListener("click", () => {
-      if (btn.classList.contains(cls.open)) {
-        btn.classList.remove(btnClass);
-        btnClass = cls.close;
-      } else if (btn.classList.contains(cls.close)) {
-        btn.classList.remove(btnClass);
-        btnClass = cls.open;
-      }
+        refs.openModalBtn.addEventListener('click', toggleModal);
+        refs.closeModalBtn.addEventListener('click', toggleModal);
 
-      void btn.offsetWidth;
-      btn.classList.add(btnClass);
-    });
-  </script>
-  <script>(() => {
-      const refs = {
-        openModalBtn: document.querySelector('[data-modal-open]'),
-        closeModalBtn: document.querySelector('[data-modal-close]'),
-        modal: document.querySelector('[data-modal]'),
-      };
-
-      refs.openModalBtn.addEventListener('click', toggleModal);
-      refs.closeModalBtn.addEventListener('click', toggleModal);
-
-      function toggleModal() {
-        refs.modal.classList.toggle('is-hidden');
-      }
-
-    })();
-  </script>
-
-</body>
-
+        function toggleModal() {
+          refs.modal.classList.toggle('is-hidden');
+        }
+      })();
+    </script>
+  </body>
 </html>
