--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <link rel="manifest" href="./site.webmanifest">
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#d41443">
     <meta name="msapplication-TileColor" content="#ff0000">
-    <meta name="theme-color" content="#fff5f6">
+    <meta name="theme-color" content="#ffffff">
     
 
     <!-- Подключение анимации -->
