--- a/src/index.html
+++ b/src/index.html
@@ -35,5 +35,6 @@
     <include src="./partials/gallery.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
