--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,6 @@
     <include src="./partials/customer_reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+    <script type="menu" src="./js/menu.js"></script>
   </body>
 </html>
