--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="./images/icons/favicon.svg" type="image/svg+xml" />
 
+    <script type="menu" src="./js/menu.js"></script>
     <script type="module" src="./index.js"></script>
     <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>
@@ -28,13 +30,14 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/customer_reviews.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/advantage.html"></include>
     <include src="./partials/gallery.html"></include>
+    <include src="./partials/customer_reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
     <script src="./js/modal.js"></script>
+    <script type="menu" src="./js/menu.js"></script>
   </body>
 </html>
