--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,14 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/products.html"></include>
-    <include src="./partials/about.html"></include>
-    <include src="./partials/advantage.html"></include>
-    <include src="./partials/gallery.html"></include>
-    <include src="./partials/customer_reviews.html"></include>
-    <include src="./partials/contacts.html"></include>
+    <main>
+      <include src="./partials/products.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/advantage.html"></include>
+      <include src="./partials/gallery.html"></include>
+      <include src="./partials/customer_reviews.html"></include>
+      <include src="./partials/contacts.html"></include>
+    </main>
     <include src="./partials/footer.html"></include>
     <script src="./js/modal.js"></script>
     <script type="menu" src="./js/menu.js"></script>
