--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-    <h2> WHAT? </h2>
+    <include src="./partials/header.html"></include>
   </body>
 </html>
