--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+  <body class="neveria">
+    <!-- ❗️❗️❗️ Add partials like so for every page 
+    <include src="./partials/example.html"></include>-->
+
+
+    <include src="./partials/nosotros.html"></include>
+    <include src ="./partials/ventajas.html"></include>
+
+
+
   </body>
 </html>
