--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/main.html"></include>
+    <include src="./partials/footer.html"></include>
+    <include src="./partials/mob-menu.html"></include>
+    <include src="./partials/modal-coctails.html"></include>
+    <include src="./partials/modal-ingredients.html"></include>
   </body>
 </html>
