--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>IceCream Factory</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <section></section>
+  </body>
 </html>
