--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <header>
       <div class="home-container">
         <div class="home">
-          <img src="logotipo" alt="logo">
+          <img src="logotipo" alt="logo" />
+        </div>
         <nav>
           <a href="#">Home</a>
           <a href="#">About us</a>
@@ -20,9 +21,11 @@
         <div class="button">
           <button type="button">Buy now ></button>
         </div>
-        <h1><span>ICE CREAM <br>MADE WITH <br></span>PASSION</h1>
+        <h1>
+          <span>ICE CREAM <br />MADE WITH <br /></span>PASSION
+        </h1>
         <button type="button">Products</button>
-        <button type="button">How it's made?</button> 
+        <button type="button">How it's made?</button>
       </div>
       <div class="cafes">
         <h1>16</h1>
@@ -33,15 +36,21 @@
         <p>food trucks</p>
       </div>
       <div class="milk"></div>
-      <img src="" alt="bio-milk"><p>Lorem ipsum dolor sit amet consectetur adipiscing elit torquent, ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus pretium magnis congue nunc aenean ante. Conubia nam ultrices hendrerit accumsan neque varius laoreet</p><span class="icon-arrow-right2"></span>
+      <img src="" alt="bio-milk" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit torquent,
+        ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus
+        pretium magnis congue nunc aenean ante. Conubia nam ultrices hendrerit
+        accumsan neque varius laoreet
+      </p>
+      <span class="icon-arrow-right2"></span>
       <div class="cone">
-      <img src="" alt="cone-flavors">
+        <img src="" alt="cone-flavors" />
       </div>
       <div class="tasty">
-      <img src="" alt="so-tasty">
+        <img src="" alt="so-tasty" />
       </div>
     </header>
-
     <main>
       <section class="products">
         <h1><span>100% natural</span> Products</h1>
