--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <div class="home-container">
         <div class="home">
-          <img src="logotipo" alt="logo" />
+          <img src="logotipo" alt="logo">
         </div>
         <nav>
           <ul>
@@ -80,6 +80,40 @@
           </li>
         </ul>
       </section>
+
+      <section class="tradition_and_love">
+        <h3>tradition and love</h3>
+        <h2>how it’s made?</h2>
+        <img
+          src="images/img-tradition-and-love.png"
+          alt="Image Tradition and Love"
+        >
+        <div class="text">
+          <p class="text_one">
+            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+            cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+            justo fringilla.
+          </p>
+
+          <p class="text_two">
+            Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+            Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+            suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+            tincidu
+          </p>
+          <p>Aliquam erat volutpat. Aenean accumsan.</p>
+          <button type="button">Read more</button>
+        </div>
+        <div>
+          <h2>721</h2>
+          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <h2>16kg</h2>
+          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <h2>84</h2>
+          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
