--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="home-container">
       <div class="home">
-        <img src="logotipo" alt="logo">
+        <img src="images/Group.png" alt="logo">
       </div>
       <nav>
         <ul>
@@ -43,7 +43,7 @@
       <p>food trucks</p>
     </div>
     <div class="milk"></div>
-    <img src="" alt="bio-milk" />
+    <img src="images/slider-pic5 1.png" alt="bio-milk" />
     <p>
       Lorem ipsum dolor sit amet consectetur adipiscing elit torquent,
       ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus
@@ -52,10 +52,10 @@
     </p>
     <span class="icon-arrow-right2"></span>
     <div class="cone">
-      <img src="" alt="cone-flavors" />
+      <img src="images/slider-pic7 1.png" alt="cone-flavors" />
     </div>
     <div class="tasty">
-      <img src="" alt="so-tasty" />
+      <img src="images/slider-pic4 1.png" alt="so-tasty" />
     </div>
   </header>
   <main>
