--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="home-container">
       <div class="home">
-        <img src="logotipo" alt="logo">
+        <img src="images/Group.png" alt="logo">
       </div>
       <nav>
         <ul>
@@ -26,6 +26,7 @@
         <button type="button">Buy now ></button>
       </div>
     </div>
+
       <h1>
         <span>ICE CREAM <br />MADE WITH <br /></span>PASSION
       </h1>
@@ -41,7 +42,7 @@
       <p>food trucks</p>
     </div>
     <div class="milk"></div>
-    <img src="" alt="bio-milk" />
+    <img src="images/slider-pic5 1.png" alt="bio-milk" />
     <p>
       Lorem ipsum dolor sit amet consectetur adipiscing elit torquent,
       ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus
@@ -50,10 +51,10 @@
     </p>
     <span class="icon-arrow-right2"></span>
     <div class="cone">
-      <img src="" alt="cone-flavors" />
+      <img src="images/slider-pic7 1.png" alt="cone-flavors" />
     </div>
     <div class="tasty">
-      <img src="" alt="so-tasty" />
+      <img src="images/slider-pic4 1.png" alt="so-tasty" />
     </div>
   </header>
   <main>
@@ -84,38 +85,35 @@
       </ul>
     </section>
 
-      <section class="tradition_and_love">
-        <h3>tradition and love</h3>
-        <h2>how it’s made?</h2>
-        <img
-          src="images/img-tradition-and-love.png"
-          alt="Image Tradition and Love"
-        />
-        <div class="text">
-          <p class="text_one">
-            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel
-            justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend
-            erat at justo fringilla.
-          </p>
+    <section class="tradition_and_love">
+      <h3>tradition and love</h3>
+      <h2>how it’s made?</h2>
+      <img src="images/img-tradition-and-love.png" alt="Image Tradition and Love">
+      <div class="text">
+        <p class="text_one">
+          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+          cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+          justo fringilla.
+        </p>
 
-          <p class="text_two">
-            Curabitur lacinia enim at ex blandit, vel pellentesque odio
-            elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum
-            euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
-            massa nibh, tincidu
-          </p>
-          <p>Aliquam erat volutpat. Aenean accumsan.</p>
-          <button type="button">Read more</button>
-        </div>
-        <div>
-          <h2>721</h2>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-          <h2>16kg</h2>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-          <h2>84</h2>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        </div>
-      </section>
-    </main>
-  </body>
+        <p class="text_two">
+          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+          tincidu
+        </p>
+        <p>Aliquam erat volutpat. Aenean accumsan.</p>
+        <button type="button">Read more</button>
+      </div>
+      <div>
+        <h2>721</h2>
+        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <h2>16kg</h2>
+        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <h2>84</h2>
+        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </div>
+    </section>
+</body>
+
 </html>
