--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <p>food trucks</p>
     </div>
     <div class="milk"></div>
-    <img src="images/slider-pic5 1.png" alt="bio-milk" />
+    <img src="images/slider-pic5.png" alt="bio-milk" />
     <p>
       Lorem ipsum dolor sit amet consectetur adipiscing elit torquent,
       ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus
@@ -51,10 +51,10 @@
     </p>
     <span class="icon-arrow-right2"></span>
     <div class="cone">
-      <img src="images/slider-pic7 1.png" alt="cone-flavors" />
+      <img src="images/slider-pic7.png" alt="cone-flavors" />
     </div>
     <div class="tasty">
-      <img src="images/slider-pic4 1.png" alt="so-tasty" />
+      <img src="images/slider-pic4.png" alt="so-tasty" />
     </div>
   </header>
   <main>
