--- a/index.html
+++ b/index.html
@@ -1,123 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IceCream Factory</title>
-  <link rel="stylesheet" href="css/styles.css"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-</head>
-
-<body>
-  <header>
-    <div class="home-container">
-      <div class="home">
-        <svg class="Logo">
-          <use xlink:href="./images/icons.svg#icon-Logo"></use>
-        </svg>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Titan+One&display=swap" rel="stylesheet"> 
+    <title>IceCream Factory</title>
+  </head>
+  <body>
+    <header>
+      <div class="home-container">
+        <div class="home">
+          <svg class="Logo">
+            <use xlink:href="./images/icons.svg#icon-Logo"></use>
+          </svg>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">How it's made?</a></li>
+            <li><a href="#">Our products</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="button">
+          <button type="button">Buy now ></button>
+        </div>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">How it's made?</a></li>
-          <li><a href="#">Our products</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="button">
-        <button type="button">Buy now ></button>
-      </div>
-    </div>
-
       <h1>
         <span>ICE CREAM <br />MADE WITH <br /></span>PASSION
       </h1>
       <button type="button">Products</button>
       <button type="button">How it's made?</button>
-    </div>
-    <div class="cafes">
-      <h1>16</h1>
-      <p>cafes</p>
-    </div>
-    <div class="foodtrucks">
-      <h1>23</h1>
-      <p>food trucks</p>
-    </div>
-    <div class="milk"></div>
-    <img src="images/slider-pic5.png" alt="bio-milk" />
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipiscing elit torquent,
-      ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus
-      pretium magnis congue nunc aenean ante. Conubia nam ultrices hendrerit
-      accumsan neque varius laoreet
-    </p>
-    <span class="icon-arrow-right2"></span>
-    <div class="cone">
-      <img src="images/slider-pic7.png" alt="cone-flavors" />
-    </div>
-    <div class="tasty">
-      <img src="images/slider-pic4.png" alt="so-tasty" />
-    </div>
-  </header>
-  <main>
-    <section class="products">
-      <h1><span>100% natural</span> Products</h1>
-      <ul class="products-list">
-        <li class="products-item">
-          <h3>ICE CREAM</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et
-          </p>
-        </li>
-        <li class="products-item">
-          <h3>ICE COFFEE</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et
-          </p>
-        </li>
-        <li class="products-item">
-          <h3>MILKSHAKES</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et
-          </p>
-        </li>
-      </ul>
-    </section>
-
-    <section class="tradition_and_love">
-      <h3>tradition and love</h3>
-      <h2>how it’s made?</h2>
-      <img src="images/img-tradition-and-love.png" alt="Image Tradition and Love">
-      <div class="text">
-        <p class="text_one">
-          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
-          cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
-          justo fringilla.
-        </p>
-
-        <p class="text_two">
-          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-          tincidu
-        </p>
-        <p>Aliquam erat volutpat. Aenean accumsan.</p>
-        <button type="button">Read more</button>
+      <div class="cafes">
+        <h1>16</h1>
+        <p>cafes</p>
       </div>
-      <div>
-        <h2>721</h2>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        <h2>16kg</h2>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        <h2>84</h2>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      <div class="foodtrucks">
+        <h1>23</h1>
+        <p>food trucks</p>
       </div>
-    </section>
-</body>
+      <div class="milk"></div>
+      <img src="images/slider-pic5.png" alt="bio-milk" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit torquent,
+        ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus
+        pretium magnis congue nunc aenean ante. Conubia nam ultrices hendrerit
+        accumsan neque varius laoreet
+      </p>
+      <span class="icon-arrow-right2"></span>
+      <div class="cone">
+        <img src="images/slider-pic7.png" alt="cone-flavors" />
+      </div>
+      <div class="tasty">
+        <img src="images/slider-pic4.png" alt="so-tasty" />
+      </div>
+    </header>
+    <main>
+      <section class="products">
+        <span>100% natural</span>
+        <h2>Products</h2>
+        <ul class="products-list">
+          <li class="products-item">
+            <h3>ICE CREAM</h3>
+            <svg class="products-point" width="24.84" height="6">
+              <use xlink:href="./images/icons.svg#icon-White-points"></use>
+            </svg>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
+            </p>
+            <img src="images/arrow-right.png" alt="arrow" width="40">
+          </li>
+          <li class="products-item">
+            <h3>ICE COFFEE</h3>
+            <svg class="products-point" width="24.84" height="6">
+              <use xlink:href="./images/icons.svg#icon-White-points"></use>
+            </svg>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
+            </p>
+            <img src="images/arrow-right.png" alt="arrow" width="40">
+          </li>
+          <li class="products-item">
+            <h3>MILKSHAKES</h3>
+            <svg class="products-point" width="24.84" height="6">
+              <use xlink:href="./images/icons.svg#icon-White-points"></use>
+            </svg>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
+            </p>
+            <img src="images/arrow-right.png" alt="arrow" width="40">
+          </li>
+        </ul>
+      </section>
 
+      <section class="tradition_and_love">
+        <h3>tradition and love</h3>
+        <h2>how it’s made?</h2>
+        <img src="images/img-tradition-and-love.png" alt="Image Tradition and Love">
+        <div class="text">
+          <p class="text_one">
+            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+            cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+            justo fringilla.
+          </p>
+
+          <p class="text_two">
+            Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+            Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+            suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+            tincidu
+          </p>
+          <p>Aliquam erat volutpat. Aenean accumsan.</p>
+          <button type="button">Read more</button>
+        </div>
+        <div>
+          <h2>721</h2>
+          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <h2>16kg</h2>
+          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <h2>84</h2>
+          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </div>
+      </section>
+  </body>
 </html>
