--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,84 @@
         as its temperature increases.</p>
     </div>
   </div>
+  <!--Buy-now-modal-->
+  <div class="buy-modal not-visible" data-modal >
+  <div class="modal">
+    <button class="buy-modal__btn" type="button" data-modal-close>
+        <svg class="buy-modal__close-icon" width="12" height="12">
+            <use href="./images/icons-svg.svg#icon-close"></use> 
+        </svg>
+    </button>
+      <h1 class="buy-modal__title"><span class="buy-modal__title--red">Buy </span>Now</h1>
+      <ul class="buy-modal__grid">
+        <li class="buy-modal__card">
+          <img class="buy-modal__img" 
+              srcset="./images/header/buy-icecream.png 1x, ./images/header/buy-icecream@2x.png"
+              src="./images/header/buy-icecream.png" 
+              alt="icecrem-balls" 
+              width="107">
+          />
+          <p class="buy-modal__text">250 g</p>
+          <label  class="buy-modal__order-label">
+            <input class="buy-modal__order-input" type="number" name="height" min="0" max="200" step="1" value="0" />
+          </label>
+        </li>
+        <li class="buy-modal__card">
+            <img class="buy-modal__img buy-modal__img--coffe-color" 
+                srcset="./images/header/buy-icecoffe.png 1x, ./images/header/buy-icecoffe@2x.png"
+                src="./images/header/buy-icecoffe.png" 
+                alt="icecrem-balls" 
+                width="107">
+            />
+            <p class="buy-modal__text">200 ml</p>
+            <label  class="buy-modal__order-label">
+              <input class="buy-modal__order-input" type="number" name="height" min="0" max="200" step="1" value="0" />
+            </label>
+        </li>
+        <li class="buy-modal__card">
+          <img class="buy-modal__img buy-modal__img--green-color" 
+              srcset="./images/header/buy-milkshake.png 1x, ./images/header/buy-milkshake@2x.png"
+              src="./images/header/buy-milkshake.png" 
+              alt="icecrem-balls" 
+              width="107">
+            />
+          <p class="buy-modal__text">200 ml</p>
+          <label  class="buy-modal__order-label">
+            <input class="buy-modal__order-input" type="number" name="height" min="0" max="200" step="1" value="0" />
+          </label>
+        </li>
+      </ul>
+    <form class="buy-modal__form">
+      <label class="buy-modal__label">
+        Name
+        <svg  class="buy-modal__icon" width="20" height="14">
+          <use href="./images/header/icons.svg#icon-name"></use>
+        </svg>
+        <input class="buy-modal__input" type="text" name="name" pattern="[a-zA-Zа-яА-Я]+" minlength="2" required>
+      </label>
+      <label class="buy-modal__label">
+        E-mail
+        <svg class="buy-modal__icon" width="18" height="16">
+          <use href="./images/header/icons.svg#icon-envelope"></use>
+        </svg>
+        <input class="buy-modal__input"  type="email" name="email" required>
+      </label>
+      <label class="buy-modal__label">
+        Phone number
+        <svg class="buy-modal__icon" width="22" height="16">
+          <use href="./images/header/icons.svg#icon-telephone"></use>
+        </svg>
+        <input class="buy-modal__input"  type="number" name="phone" autocomplete="off">
+      </label>
+      <label class="buy-modal__label">
+        Leave a comment
+        <textarea class="buy-modal__textarea" name="comment" placeholder="text"></textarea>
+      </label>
+    </form>
+    <button class="buy-modal__submit-btn" type="submit">Send</button>
+  </div>
+  </div>
+</div>
   <main>
     <include src="./partials/header-hero.html"></include>
     <include src="./partials/products.html"></include>
@@ -44,6 +122,7 @@
   </main>
   <script src="./js/products.js"></script>
   <script src="./js/about-modal.js"></script>
+  <script src="./js/buy-modal.js"></script>
 </body>
 
 </html>
